Refactoring day 20 part 1

--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "from copy import deepcopy\n",
     "from enum import Enum\n",
     "\n",
-    "from utils import product, neighboring_cells"
+    "from utils import product"
    ]
   },
   {
@@ -873,370 +873,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Set\n",
+    "from dataclasses import dataclass, field\n",
     "import heapq\n",
+    "from typing import Any\n",
     "\n",
-    "@dataclass(frozen=True, eq=True)\n",
-    "class Tile:\n",
-    "    tile_id: int\n",
-    "    top: str\n",
-    "    bottom: str\n",
-    "    left: str\n",
-    "    right: str\n",
-    "    flipped: bool = False\n",
-    "    rotation: int = 0\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def from_record(record):\n",
-    "        tile_id, tile_map = record.split(':')\n",
-    "        tile_id = int(tile_id.strip().split()[-1])\n",
-    "        rows = tile_map.strip().splitlines()\n",
-    "        top = rows[0]\n",
-    "        bottom = rows[-1]\n",
-    "        left = ''.join(row[0] for row in rows)\n",
-    "        right = ''.join(row[-1] for row in rows)\n",
-    "        return Tile(tile_id, top, bottom, left, right)\n",
-    "\n",
-    "    def edges(self):\n",
-    "        return set([self.top, self.bottom, self.left, self.right])\n",
-    "\n",
-    "    def flip(self):\n",
-    "        return Tile(self.tile_id,\n",
-    "                    self.top[::-1], self.bottom[::-1], self.right, self.left,\n",
-    "                    not self.flipped, self.rotation)\n",
-    "    \n",
-    "    def rotate(self, amount):\n",
-    "        rotation = (self.rotation + amount) % 360\n",
-    "        if amount == 90:\n",
-    "            return Tile(self.tile_id, self.left[::-1], self.right[::-1], self.bottom, self.top, self.flipped, rotation)\n",
-    "        elif amount == 180:\n",
-    "            return Tile(self.tile_id, self.bottom[::-1], self.top[::-1], self.right[::-1], self.left[::-1], self.flipped, rotation)\n",
-    "        elif amount == 270:\n",
-    "            return Tile(self.tile_id, self.right, self.left, self.top[::-1], self.bottom[::-1], self.flipped, rotation)\n",
-    "        else:\n",
-    "            return self\n",
-    "\n",
-    "    def orientations(self):\n",
-    "        for deg in [0, 90, 180, 270]:\n",
-    "            yield self.rotate(deg)\n",
-    "            yield self.flip().rotate(deg)\n",
-    "\n",
-    "    def tile_key(self):\n",
-    "        return (self.tile_id, self.flipped, self.rotation)\n",
-    "\n",
-    "    def fits_left_of(self, tile):\n",
-    "        return self.right == tile.left\n",
-    "\n",
-    "    def fits_above(self, tile):\n",
-    "        return self.bottom == tile.top\n",
-    "\n",
-    "    def __hash__(self):\n",
-    "        return hash(self.tile_key())\n",
+    "from day20_archive import place_all_v1, place_all_v2\n",
     "\n",
     "\n",
-    "@dataclass(frozen=True, eq=True)\n",
-    "class Edge:\n",
-    "    position: str\n",
-    "    tile1: Tile\n",
-    "    tile2: Tile\n",
-    "\n",
-    "\n",
-    "@dataclass(eq=True, order=True)\n",
-    "class TileMap:\n",
-    "    tiles: Set[Tile] = field(default_factory=set)\n",
-    "    edges: Set[Edge] = field(default_factory=set)\n",
-    "\n",
-    "    def try_placing(self, tile):\n",
-    "        if not self.tiles:\n",
-    "            yield TileMap(self.tiles | {tile}, self.edges)\n",
-    "\n",
-    "        for other_tile in self.tiles:\n",
-    "            for oriented in tile.orientations():\n",
-    "                oriented_key = oriented.tile_key()\n",
-    "                if oriented.fits_left_of(other_tile):\n",
-    "                    yield self.place_left_of(oriented, other_tile)\n",
-    "                if other_tile.fits_left_of(oriented):\n",
-    "                    yield self.place_left_of(other_tile, oriented)\n",
-    "                if oriented.fits_above(other_tile):\n",
-    "                    yield self.place_above(oriented, other_tile)\n",
-    "                if other_tile.fits_above(oriented):\n",
-    "                    yield self.place_above(other_tile, oriented)\n",
-    "        \n",
-    "    def place_left_of(self, t1, t2):\n",
-    "        return TileMap(self.tiles | {t1, t2},\n",
-    "                       self.edges | {Edge('left', t1, t2)})\n",
-    "\n",
-    "    def place_above(self, t1, t2):\n",
-    "        return TileMap(self.tiles | {t1, t2},\n",
-    "                       self.edges | {Edge('above', t1, t2)})\n",
-    "\n",
-    "    def complete_edges(self):\n",
-    "        edge_completions = defaultdict(lambda: None)\n",
-    "        all_edges = set()\n",
-    "        \n",
-    "        def add_edge(edge):\n",
-    "            if edge in all_edges: return False\n",
-    "            all_edges.add(edge)\n",
-    "            edge_completions[(edge.tile1, edge.position)] = edge.tile2\n",
-    "            edge_completions[(edge.position, edge.tile2)] = edge.tile1\n",
-    "            return False\n",
-    "\n",
-    "        for edge in self.edges:\n",
-    "            add_edge(edge)\n",
-    "        \n",
-    "        while True:\n",
-    "            changed = False\n",
-    "            for edge in list(all_edges):\n",
-    "                changed |= add_edge(edge)\n",
-    "                position, t1, t2 = edge.position, edge.tile1, edge.tile2\n",
-    "                new_edges = []\n",
-    "                if edge.position == 'left':\n",
-    "                    new_edges.append(('left', edge_completions[(t1, 'above')],  edge_completions[(t2, 'above')]))\n",
-    "                    new_edges.append(('left', edge_completions[('above', t1)], edge_completions[('above', t2)]))\n",
-    "                elif edge.position == 'above':\n",
-    "                    new_edges.append(('above', edge_completions[(t1, 'left')],  edge_completions[(t2, 'left')]))\n",
-    "                    new_edges.append(('above', edge_completions[('left', t1)], edge_completions[('left', t2)]))\n",
-    "                for position, t1, t2 in new_edges:\n",
-    "                    if t1 and t2:\n",
-    "                        changed |= add_edge(Edge(position, t1, t2))\n",
-    "            if not changed: break\n",
-    "        return all_edges, edge_completions\n",
-    "\n",
-    "    def is_solved(self, m, n):\n",
-    "        all_edges, _ = self.complete_edges()\n",
-    "        return len(all_edges) == (m * (m - 1) + n * (n - 1))\n",
-    "\n",
-    "    def corners(self):\n",
-    "        all_edges, edge_completions = self.complete_edges()\n",
-    "        tl = tr = bl = br = None\n",
-    "        for t in self.tiles:\n",
-    "            if not edge_completions[('above', t)] and not edge_completions[('left', t)]:\n",
-    "                tl = t\n",
-    "            elif not edge_completions[('above', t)] and not edge_completions[(t, 'left')]:\n",
-    "                tr = t\n",
-    "            elif not edge_completions[(t, 'above')] and not edge_completions[('left', t)]:\n",
-    "                bl = t\n",
-    "            elif not edge_completions[(t, 'above')] and not edge_completions[(t, 'left')]:\n",
-    "                br = t\n",
-    "        return tl, tr, bl, br\n",
-    "\n",
-    "def place_all(tiles, size):\n",
-    "    possibilities = []\n",
-    "    def add_possibility(tile_map, remaining):\n",
-    "        heapq.heappush(possibilities, (len(remaining), tile_map, frozenset(remaining)))\n",
-    "\n",
-    "    initial_tile_map = list(TileMap().try_placing(tiles[0]))[0]\n",
-    "    add_possibility(initial_tile_map, tiles[1:])\n",
-    "\n",
-    "    while possibilities:\n",
-    "        _, tile_map, remaining = heapq.heappop(possibilities)\n",
-    "        if not remaining and tile_map.is_solved(size, size): return tile_map\n",
-    "        for tile in remaining:\n",
-    "            new_remaining = remaining - {tile}\n",
-    "            for new_tile_map in tile_map.try_placing(tile):\n",
-    "                add_possibility(new_tile_map, new_remaining)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 408,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_input = \"\"\"\n",
-    "Tile 2311:\n",
-    "..##.#..#.\n",
-    "##..#.....\n",
-    "#...##..#.\n",
-    "####.#...#\n",
-    "##.##.###.\n",
-    "##...#.###\n",
-    ".#.#.#..##\n",
-    "..#....#..\n",
-    "###...#.#.\n",
-    "..###..###\n",
-    "\n",
-    "Tile 1951:\n",
-    "#.##...##.\n",
-    "#.####...#\n",
-    ".....#..##\n",
-    "#...######\n",
-    ".##.#....#\n",
-    ".###.#####\n",
-    "###.##.##.\n",
-    ".###....#.\n",
-    "..#.#..#.#\n",
-    "#...##.#..\n",
-    "\n",
-    "Tile 1171:\n",
-    "####...##.\n",
-    "#..##.#..#\n",
-    "##.#..#.#.\n",
-    ".###.####.\n",
-    "..###.####\n",
-    ".##....##.\n",
-    ".#...####.\n",
-    "#.##.####.\n",
-    "####..#...\n",
-    ".....##...\n",
-    "\n",
-    "Tile 1427:\n",
-    "###.##.#..\n",
-    ".#..#.##..\n",
-    ".#.##.#..#\n",
-    "#.#.#.##.#\n",
-    "....#...##\n",
-    "...##..##.\n",
-    "...#.#####\n",
-    ".#.####.#.\n",
-    "..#..###.#\n",
-    "..##.#..#.\n",
-    "\n",
-    "Tile 1489:\n",
-    "##.#.#....\n",
-    "..##...#..\n",
-    ".##..##...\n",
-    "..#...#...\n",
-    "#####...#.\n",
-    "#..#.#.#.#\n",
-    "...#.#.#..\n",
-    "##.#...##.\n",
-    "..##.##.##\n",
-    "###.##.#..\n",
-    "\n",
-    "Tile 2473:\n",
-    "#....####.\n",
-    "#..#.##...\n",
-    "#.##..#...\n",
-    "######.#.#\n",
-    ".#...#.#.#\n",
-    ".#########\n",
-    ".###.#..#.\n",
-    "########.#\n",
-    "##...##.#.\n",
-    "..###.#.#.\n",
-    "\n",
-    "Tile 2971:\n",
-    "..#.#....#\n",
-    "#...###...\n",
-    "#.#.###...\n",
-    "##.##..#..\n",
-    ".#####..##\n",
-    ".#..####.#\n",
-    "#..#.#..#.\n",
-    "..####.###\n",
-    "..#.#.###.\n",
-    "...#.#.#.#\n",
-    "\n",
-    "Tile 2729:\n",
-    "...#.#.#.#\n",
-    "####.#....\n",
-    "..#.#.....\n",
-    "....#..#.#\n",
-    ".##..##.#.\n",
-    ".#.####...\n",
-    "####.#.#..\n",
-    "##.####...\n",
-    "##..#.##..\n",
-    "#.##...##.\n",
-    "\n",
-    "Tile 3079:\n",
-    "#.#.#####.\n",
-    ".#..######\n",
-    "..#.......\n",
-    "######....\n",
-    "####.#..#.\n",
-    ".#...#.##.\n",
-    "#.#####.##\n",
-    "..#.###...\n",
-    "..#.......\n",
-    "..#.###...\"\"\"\n",
-    "\n",
-    "test_tiles = [Tile.from_record(record) for record in test_input.strip().split('\\n\\n')]\n",
-    "tiles_by_id = {t.tile_id: t for t in test_tiles}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 410,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "above 2971 2729\nleft 2729 1427\nabove 1489 1427\nabove 1427 2311\nleft 1951 2311\nleft 1427 2473\nleft 2311 3079\nleft 1489 1171\n"
-     ]
-    }
-   ],
-   "source": [
-    "solution = place_all(test_tiles, 3)\n",
-    "for e in solution.edges:\n",
-    "    print(e.position, e.tile1.tile_id, e.tile2.tile_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 411,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_edges, _ = solution.complete_edges()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "above 2729 1951\nabove 1427 2311\nleft 1427 2473\nleft 2311 3079\nleft 2971 1489\nabove 1171 2473\nabove 2971 2729\nleft 2729 1427\nabove 1489 1427\nabove 2473 3079\nleft 1951 2311\nleft 1489 1171\n"
-     ]
-    }
-   ],
-   "source": [
-    "for e in final_edges:\n",
-    "    print(e.position, e.tile1.tile_id, e.tile2.tile_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 413,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "20899048083289"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 413
-    }
-   ],
-   "source": [
-    "product(t.tile_id for t in solution.corners())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 396,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def neighboring_cells(cell):\n",
     "    x, y = cell\n",
     "    return ((x - 1, y), (x, y - 1), (x + 1, y), (x, y + 1))\n",
+    "\n",
     "\n",
     "class TileMapV2:\n",
     "    def __init__(self, tiles=None, cells=None):\n",
@@ -1267,6 +918,13 @@
     "        new_cells = dict(self.cells)\n",
     "        new_cells[cell] = tile\n",
     "        return TileMapV2(self.tiles | {tile}, new_cells)\n",
+    "\n",
+    "    def placements(self, tile):\n",
+    "        orientations = list(tile.orientations()) if self.tiles else [tile]\n",
+    "        for cell in self.available_cells():\n",
+    "            for tile in orientations:\n",
+    "                if self.fits(tile, cell):\n",
+    "                    yield tile, cell\n",
     "\n",
     "    def bounds(self):\n",
     "        x_lo = min(self.cells, key=lambda xy: xy[0])[0]\n",
@@ -1305,40 +963,82 @@
     "        return len(self.tiles) < len(other.tiles)\n",
     "\n",
     "\n",
-    "def place_one(tile_map, tile):\n",
-    "    orientations = list(tile.orientations()) if tile_map.tiles else [tile]\n",
-    "    for cell in tile_map.available_cells():\n",
-    "        for tile in orientations:\n",
-    "            if tile_map.fits(tile, cell):\n",
-    "                yield cell, tile_map.place(tile, cell)\n",
     "\n",
+    "\n",
+    "\n",
+    "@dataclass(order=True)\n",
+    "class PrioritizedItem:\n",
+    "    priority: int\n",
+    "    item: Any = field(compare=False)\n",
     "\n",
     "def place_all(tiles, size):\n",
-    "    possibilities = []\n",
-    "    def add_possibility(tile_map, remaining, cell):\n",
-    "        p1 = len(remaining)\n",
-    "        p2 = -sum(t is not None for t in tile_map.neighboring_tiles(cell))\n",
-    "        heapq.heappush(possibilities, ((p1, p2), tile_map, remaining))\n",
+    "    placements = []\n",
+    "    tile_map = TileMapV2()\n",
     "\n",
-    "    def get_possibility():\n",
-    "        return heapq.heappop(possibilities)[1:]\n",
+    "    def add_placement(tile_map, tile, cell, remaining):\n",
+    "        neighbors = sum(t is not None for t in tile_map.neighboring_tiles(cell))\n",
+    "        priority = (len(remaining), -neighbors)\n",
+    "        heapq.heappush(placements, PrioritizedItem(priority, (tile_map, tile, cell, remaining)))\n",
     "\n",
-    "    for cell, tile_map in place_one(TileMapV2(), tiles[0]):\n",
-    "        add_possibility(tile_map, frozenset(tiles[1:]), cell)\n",
+    "    def get_placement():\n",
+    "        return heapq.heappop(placements).item\n",
     "\n",
-    "    while possibilities:\n",
-    "        tile_map, remaining = get_possibility()\n",
-    "        if not remaining and tile_map.is_filled(): return tile_map\n",
-    "        for tile in remaining:\n",
-    "            new_remaining = remaining - {tile}\n",
-    "            for cell, new_tile_map in place_one(tile_map, tile):\n",
-    "                if all(dim <= size for dim in new_tile_map.size()):\n",
-    "                    add_possibility(new_tile_map, new_remaining, cell)"
+    "    for tile, cell in tile_map.placements(tiles[0]):\n",
+    "        remaining = frozenset(tiles[1:])\n",
+    "        add_placement(tile_map, tile, cell, remaining)\n",
+    "\n",
+    "    while placements:\n",
+    "        tile_map, tile, cell, remaining = get_placement()\n",
+    "        new_tile_map = tile_map.place(tile, cell)\n",
+    "        if any(dim > size for dim in new_tile_map.size()): continue\n",
+    "        if not remaining and new_tile_map.is_filled(): return new_tile_map\n",
+    "        for new_tile in remaining:\n",
+    "            new_remaining = remaining - {new_tile}\n",
+    "            for new_tile, new_cell in new_tile_map.placements(new_tile):\n",
+    "                add_placement(new_tile_map, new_tile, new_cell, new_remaining)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'Tile' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Tile' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day20_test.txt') as f:\n",
+    "    test_tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
+    "    #solution = place_all_v1(test_tiles, 3)\n",
+    "    #solution = place_all_v2(test_tiles, 3)\n",
+    "    #solution = place_all_v3(test_tiles, 3)\n",
+    "    print('Part 1: ', product(t.tile_id for t in solution.corners()))\n",
+    "\n",
+    "tiles_by_id = {t.tile_id: t for t in test_tiles}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -1374,20 +1074,38 @@
     }
    ],
    "source": [
-    "tile_map = place_all(test_tiles, 3)\n",
+    "tile_map = place_all_v2(test_tiles, 3)\n",
     "tile_map.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Part 1:  16192267830719\nWall time: 6.09 s\n"
+      "2971  1489  1171  \n2729  1427  2473  \n1951  2311  3079  \n"
+     ]
+    }
+   ],
+   "source": [
+    "tile_map = place_all_v3(test_tiles, 3)\n",
+    "tile_map.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  16192267830719\nWall time: 5.89 s\n"
      ]
     }
    ],
@@ -1396,7 +1114,9 @@
     "# Final answers\n",
     "with open('day20.txt') as f:\n",
     "    tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
-    "    solution = place_all(tiles, 12)\n",
+    "    #solution = place_all_v1(tiles, 12)\n",
+    "    #solution = place_all_v2(tiles, 12)\n",
+    "    solution = place_all_v3(tiles, 12)\n",
     "    print('Part 1: ', product(t.tile_id for t in solution.corners()))"
    ]
   }
