Finished day 20 pt. 2

--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.9.1-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,239 +873,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<module 'day20' from 'd:\\\\My Library\\\\Documents\\\\Workspace\\\\advent-of-code-2020\\\\day20.py'>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 109
+    }
+   ],
    "source": [
-    "from dataclasses import dataclass, field\n",
-    "import heapq\n",
-    "from typing import Any\n",
+    "import numpy as np\n",
+    "from day20 import Tile, TileMap, place_all\n",
     "\n",
-    "from day20_archive import place_all_v1, place_all_v2\n",
+    "from importlib import reload\n",
     "\n",
-    "\n",
-    "def neighboring_cells(cell):\n",
-    "    x, y = cell\n",
-    "    return ((x - 1, y), (x, y - 1), (x + 1, y), (x, y + 1))\n",
-    "\n",
-    "\n",
-    "class TileMapV2:\n",
-    "    def __init__(self, tiles=None, cells=None):\n",
-    "        self.tiles = tiles or frozenset()\n",
-    "        self.cells = cells or {}\n",
-    "\n",
-    "    def available_cells(self):\n",
-    "        if not self.cells:\n",
-    "            yield (0, 0)\n",
-    "        else:\n",
-    "            for cell in self.cells:\n",
-    "                for neighbor in neighboring_cells(cell):\n",
-    "                    if not self.cells.get(neighbor):\n",
-    "                        yield neighbor\n",
-    "            \n",
-    "    def neighboring_tiles(self, cell):\n",
-    "        return [self.cells.get(neighbor) for neighbor in neighboring_cells(cell)]\n",
-    "\n",
-    "    def fits(self, tile, cell):\n",
-    "        neighbors = self.neighboring_tiles(cell)\n",
-    "        left_tile, above_tile, right_tile, below_tile = neighbors\n",
-    "        return ((not left_tile or left_tile.fits_left_of(tile)) and\n",
-    "                (not right_tile or tile.fits_left_of(right_tile)) and\n",
-    "                (not above_tile or above_tile.fits_above(tile)) and\n",
-    "                (not below_tile or tile.fits_above(below_tile)))\n",
-    "\n",
-    "    def place(self, tile, cell):\n",
-    "        new_cells = dict(self.cells)\n",
-    "        new_cells[cell] = tile\n",
-    "        return TileMapV2(self.tiles | {tile}, new_cells)\n",
-    "\n",
-    "    def placements(self, tile):\n",
-    "        orientations = list(tile.orientations()) if self.tiles else [tile]\n",
-    "        for cell in self.available_cells():\n",
-    "            for tile in orientations:\n",
-    "                if self.fits(tile, cell):\n",
-    "                    yield tile, cell\n",
-    "\n",
-    "    def bounds(self):\n",
-    "        x_lo = min(self.cells, key=lambda xy: xy[0])[0]\n",
-    "        x_hi = max(self.cells, key=lambda xy: xy[0])[0]\n",
-    "        y_lo = min(self.cells, key=lambda xy: xy[1])[1]\n",
-    "        y_hi = max(self.cells, key=lambda xy: xy[1])[1]\n",
-    "        return x_lo, x_hi, y_lo, y_hi\n",
-    "\n",
-    "    def size(self):\n",
-    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
-    "        return x_hi - x_lo + 1, y_hi - y_lo + 1\n",
-    "\n",
-    "    def is_filled(self):\n",
-    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
-    "        for x in range(x_lo, x_hi+1):\n",
-    "            for y in range(y_lo, y_hi+1):\n",
-    "                if not self.cells.get((x, y)):\n",
-    "                    return False\n",
-    "        return True\n",
-    "\n",
-    "    def corners(self):\n",
-    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
-    "        return [self.cells[(x_lo, y_lo)],\n",
-    "                self.cells[(x_hi, y_lo)],\n",
-    "                self.cells[(x_lo, y_hi)],\n",
-    "                self.cells[(x_hi, y_hi)]]\n",
-    "\n",
-    "    def print(self):\n",
-    "        x_lo, x_hi, y_lo, y_hi = self.bounds()\n",
-    "        for y in range(y_lo, y_hi+1):\n",
-    "            for x in range(x_lo, x_hi+1):\n",
-    "                print(f'{self.cells[(x,y)].tile_id if (x,y) in self.cells else \".\":<6}', end='')\n",
-    "            print()\n",
-    "\n",
-    "    def __lt__(self, other):\n",
-    "        return len(self.tiles) < len(other.tiles)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "@dataclass(order=True)\n",
-    "class PrioritizedItem:\n",
-    "    priority: int\n",
-    "    item: Any = field(compare=False)\n",
-    "\n",
-    "def place_all(tiles, size):\n",
-    "    placements = []\n",
-    "    tile_map = TileMapV2()\n",
-    "\n",
-    "    def add_placement(tile_map, tile, cell, remaining):\n",
-    "        neighbors = sum(t is not None for t in tile_map.neighboring_tiles(cell))\n",
-    "        priority = (len(remaining), -neighbors)\n",
-    "        heapq.heappush(placements, PrioritizedItem(priority, (tile_map, tile, cell, remaining)))\n",
-    "\n",
-    "    def get_placement():\n",
-    "        return heapq.heappop(placements).item\n",
-    "\n",
-    "    for tile, cell in tile_map.placements(tiles[0]):\n",
-    "        remaining = frozenset(tiles[1:])\n",
-    "        add_placement(tile_map, tile, cell, remaining)\n",
-    "\n",
-    "    while placements:\n",
-    "        tile_map, tile, cell, remaining = get_placement()\n",
-    "        new_tile_map = tile_map.place(tile, cell)\n",
-    "        if any(dim > size for dim in new_tile_map.size()): continue\n",
-    "        if not remaining and new_tile_map.is_filled(): return new_tile_map\n",
-    "        for new_tile in remaining:\n",
-    "            new_remaining = remaining - {new_tile}\n",
-    "            for new_tile, new_cell in new_tile_map.placements(new_tile):\n",
-    "                add_placement(new_tile_map, new_tile, new_cell, new_remaining)"
+    "reload(sys.modules['day20'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'Tile' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Tile' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Wall time: 7.99 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# Final answers\n",
+    "\n",
     "with open('day20_test.txt') as f:\n",
     "    test_tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
-    "    #solution = place_all_v1(test_tiles, 3)\n",
-    "    #solution = place_all_v2(test_tiles, 3)\n",
-    "    #solution = place_all_v3(test_tiles, 3)\n",
-    "    print('Part 1: ', product(t.tile_id for t in solution.corners()))\n",
-    "\n",
-    "tiles_by_id = {t.tile_id: t for t in test_tiles}"
+    "    tiles_by_id = {t.tile_id: t for t in test_tiles}\n",
+    "    solution = place_all(test_tiles, 3)\n",
+    "    assert product(t.tile_id for t in solution.corners()) == 20899048083289"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "monster_str = \"\"\"\n",
+    "                  # \n",
+    "#    ##    ##    ###\n",
+    " #  #  #  #  #  #   \n",
+    "\"\"\"\n",
+    "\n",
+    "@dataclass\n",
+    "class Monster:\n",
+    "    image: np.array\n",
+    "    ys: np.array\n",
+    "    xs: np.array\n",
+    "    length: int\n",
+    "\n",
+    "def parse_monster():\n",
+    "    image = np.array([list(r) for r in monster_str.splitlines() if r])\n",
+    "    assert image.shape == (3, 20), image.shape\n",
+    "    ys, xs = np.where(image == '#')\n",
+    "    return Monster(image, ys, xs, len(ys))\n",
+    "\n",
+    "def orientations(stitched):\n",
+    "    flipped = np.fliplr(stitched)\n",
+    "    for rot in [0, 90, 180, 270]:\n",
+    "        yield np.rot90(stitched, rot // 90, axes=(1, 0))\n",
+    "        yield np.rot90(flipped, rot // 90, axes=(1, 0))\n",
+    "\n",
+    "def to_bitmap(stitched):\n",
+    "    bitmap = stitched.copy()\n",
+    "    bitmap[bitmap == '#'] = 1\n",
+    "    bitmap[bitmap == '.'] = 0\n",
+    "    return bitmap.astype(int)\n",
+    "\n",
+    "def bitmap_to_string(matrix):\n",
+    "    return \"\\n\".join(\"\".join('#' if bit == 1 else '.' for bit in r) for r in matrix)\n",
+    "\n",
+    "def contains_monster(bitmap, monster):\n",
+    "    return sum(bitmap[monster.ys, monster.xs]) == monster.length\n",
+    "\n",
+    "def find_sea_monsters(stitched, monster):\n",
+    "    h, w = monster.image.shape\n",
+    "    for a, orientation in enumerate(orientations(stitched)):\n",
+    "        bitmap = to_bitmap(orientation)\n",
+    "        found = False\n",
+    "        for i in range(0, bitmap.shape[0] - h):\n",
+    "            for j in range(0, bitmap.shape[1] - w):\n",
+    "                window = bitmap[i:i+h, j:j+w]\n",
+    "                if contains_monster(window, monster):\n",
+    "                    window[monster.ys, monster.xs] = 0\n",
+    "                    found = True\n",
+    "        if found:\n",
+    "            return sum(bitmap[bitmap == 1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert find_sea_monsters(solution.stitch(), monster) == 273"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "placing 1951\n1951  \n\nplacing 2311\n1951  2311  \n\nplacing 3079\n1951  2311  3079  \n\nplacing 2729\n2729  .     .     \n1951  2311  3079  \n\nplacing 1427\n2729  1427  .     \n1951  2311  3079  \n\n2729  1427  .     \n1951  2311  3079  \n\n"
-     ]
-    }
-   ],
-   "source": [
-    "tile_map = TileMapV2()\n",
-    "for tile_id in [1951, 2311, 3079, 2729, 1427]:\n",
-    "    print('placing', tile_id)\n",
-    "    for cell, tile_map in place_one(tile_map, tiles_by_id[tile_id]):\n",
-    "        tile_map.print()\n",
-    "        print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2971  1489  1171  \n2729  1427  2473  \n1951  2311  3079  \n"
-     ]
-    }
-   ],
-   "source": [
-    "tile_map = place_all_v2(test_tiles, 3)\n",
-    "tile_map.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "2971  1489  1171  \n2729  1427  2473  \n1951  2311  3079  \n"
-     ]
-    }
-   ],
-   "source": [
-    "tile_map = place_all_v3(test_tiles, 3)\n",
-    "tile_map.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Part 1:  16192267830719\nWall time: 5.89 s\n"
+      "Part 1:  16192267830719\nPart 2:  1909\nWall time: 5.72 s\n"
      ]
     }
    ],
@@ -1114,10 +1004,9 @@
     "# Final answers\n",
     "with open('day20.txt') as f:\n",
     "    tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
-    "    #solution = place_all_v1(tiles, 12)\n",
-    "    #solution = place_all_v2(tiles, 12)\n",
-    "    solution = place_all_v3(tiles, 12)\n",
-    "    print('Part 1: ', product(t.tile_id for t in solution.corners()))"
+    "    solution = place_all(tiles, 12)\n",
+    "    print('Part 1: ', product(t.tile_id for t in solution.corners()))\n",
+    "    print('Part 2: ', find_sea_monsters(solution.stitch(), monster))"
    ]
   }
  ]
