Minor tweaks to 20

--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -873,39 +873,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 242,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<module 'day20' from 'd:\\\\My Library\\\\Documents\\\\Workspace\\\\advent-of-code-2020\\\\day20.py'>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 109
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from day20 import Tile, TileMap, place_all\n",
-    "\n",
-    "from importlib import reload\n",
-    "\n",
-    "reload(sys.modules['day20'])"
+    "from day20 import Tile, TileMap, place_all"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Wall time: 7.99 ms\n"
+      "Wall time: 6.99 ms\n"
      ]
     }
    ],
@@ -921,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,13 +945,13 @@
     "    return \"\\n\".join(\"\".join('#' if bit == 1 else '.' for bit in r) for r in matrix)\n",
     "\n",
     "def contains_monster(bitmap, monster):\n",
-    "    return sum(bitmap[monster.ys, monster.xs]) == monster.length\n",
+    "    return bitmap[monster.ys, monster.xs].sum() == monster.length\n",
     "\n",
     "def find_sea_monsters(stitched, monster):\n",
     "    h, w = monster.image.shape\n",
-    "    for a, orientation in enumerate(orientations(stitched)):\n",
-    "        bitmap = to_bitmap(orientation)\n",
+    "    for orientation in orientations(stitched):\n",
     "        found = False\n",
+    "        bitmap = to_bitmap(orientation)\n",
     "        for i in range(0, bitmap.shape[0] - h):\n",
     "            for j in range(0, bitmap.shape[1] - w):\n",
     "                window = bitmap[i:i+h, j:j+w]\n",
@@ -979,23 +964,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert find_sea_monsters(solution.stitch(), monster) == 273"
+    "assert find_sea_monsters(solution.stitch(), parse_monster()) == 273"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Part 1:  16192267830719\nPart 2:  1909\nWall time: 5.72 s\n"
+      "...###...##...#...#..###\n.#.###..##..##..####.##.\n#.##..#..#...#..####...#\n#####..#####...###....##\n#..####...#.#.#.###.###.\n..#.#..#..#.#.#.####.###\n.####.###.#...###.#..#.#\n.#.#.###.##.##.#..#.##..\n###.#...#..#.##.######..\n.#.#....#.##.#...###.##.\n...#..#..#.#.##..###.###\n##..##.#...#...#.#.#.#..\n#.####....##..########.#\n###.#.#...#.######.#..##\n#.####..#.####.#.#.###..\n#..#.##..#..###.#.##....\n.####...#..#.....#......\n....#..#...##..#.#.###..\n...########.#....#####.#\n##.#....#.##.####...#.##\n###.#####...#.#####.#..#\n##.##.###.#.#..######...\n###....#.#....#..#......\n.#.#..#.##...#.##..#####\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(solution.stitch(as_string=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "image window:\n.#...#.###...#.##.##\n#.##.###.#.##.##.###\n##.###.####..#.####.\n\ncontains monster: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "stitched = solution.stitch()\n",
+    "bitmap = to_bitmap(list(orientations(stitched))[2])\n",
+    "monster = parse_monster()\n",
+    "window = bitmap[2:5, 2:22]\n",
+    "print('image window:')\n",
+    "print(bitmap_to_string(window))\n",
+    "print()\n",
+    "print('contains monster:', contains_monster(window, monster))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  16192267830719\nPart 2:  1909\nWall time: 5.91 s\n"
      ]
     }
    ],
@@ -1006,7 +1032,7 @@
     "    tiles = [Tile.from_record(record) for record in f.read().strip().split('\\n\\n')]\n",
     "    solution = place_all(tiles, 12)\n",
     "    print('Part 1: ', product(t.tile_id for t in solution.corners()))\n",
-    "    print('Part 2: ', find_sea_monsters(solution.stitch(), monster))"
+    "    print('Part 2: ', find_sea_monsters(solution.stitch(), parse_monster()))"
    ]
   }
  ]
